--- a/dice-game/src/App.css
+++ b/dice-game/src/App.css
@@ -4,39 +4,45 @@
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: #31363e;
+  color: #fefada;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.matemasie-regular {
+  font-family: "Matemasie", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.dice {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
-.card {
-  padding: 2em;
+.btn {
+  background-color: #00cb96;
+  width: 50%;
 }
-
-.read-the-docs {
-  color: #888;
+i {
+  color: #fefada;
+}
+.player {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.player p {
+  color: #00cb96;
+}
+.winner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.winner p {
+  color: #00cb96;
 }
